# tower/src/main/java/net/bytle/tower/eraldy/api/openapi/interfaces/MailingApi.java
@@ -4,6 +4,7 @@ import io.vertx.core.Future;
 import io.vertx.ext.web.RoutingContext;
 import net.bytle.tower.eraldy.api.openapi.invoker.ApiResponse;
 import net.bytle.tower.eraldy.model.openapi.Mailing;
+import net.bytle.tower.eraldy.model.openapi.MailingUpdatePost;
 
 public interface MailingApi  {
 
@@ -11,4 +12,9 @@ public interface MailingApi  {
      * The mailing
     */
     Future<ApiResponse<Mailing>> mailingIdentifierGet(RoutingContext routingContext, String mailingIdentifier);
+
+    /**
+     * Mailing Update
+    */
+    Future<ApiResponse<Mailing>> mailingIdentifierPost(RoutingContext routingContext, String mailingIdentifier, MailingUpdatePost mailingUpdatePost);
 }
